--- a/index.html
+++ b/index.html
@@ -6,21 +6,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Welcome</h1>
+    <header>
+        <div class="decoration"></div>
+        <div class="flex container">
+            <!-- Logo -->
+            <div class="logo flex">
+                <img src="img/PenguinLogo.png" alt="Laura Ukrainec's logo" height="100rem">
+                <h1>
+                    Laura Ukrainec
+                    <span>- Game Programmer -</span>
+                </h1>
+            </div>
+            <!-- Menu Icon -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 menu-icon" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
+			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h8m-8 6h16" />
+		    </svg>
+            <!-- Menu -->
+            <nav>
+                <ul class="main-menu">
+                    <li><a class="current" href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li class="top-level">
+                        <a href="#">Portfolio
+                        <!-- Dropdown Arrow -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+						</svg></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Games</a></li>
+                            <li><a href="#">Artwork</a></li>
+                            <li><a href="#">Personal Projects</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="container">
+        <!-- Hello -->
+        <section>
+            <h2>Hello!</h2>
+            <div>
+                <div>
+                    <p>I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting
+                        blueprints.
+                    </p>
+                    <p>I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.</p>
+                </div>
+                <a class="flex" href="#">Learn More
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+        <div class="divider"></div>
+        <!-- What I Can Do -->
+        <section>
+            <h2>What I can do.</h2>
+            <div>
+                <div>
+                    <p>I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
+                    </p>
+                    <p>I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.</p>
+                    <p>I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.</p>
+                </div>
+                <a class="flex" href="#">Portfolio
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
+        <div class="divider"></div>
+        <!-- I Can Help You -->
+        <section>
+            <h2>I can help you.</h2>
+            <div>
+                <div>
+                    <p>I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
+                    </p>
+                    <p>I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.</p>
+                    <p>If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.</p>
+                </div>
+                <a class="flex" href="#">Contact Me
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="decoration"></div>
+        <div class="container">
+            <p>Copyright &copy;2021, Laura Ukrainec.
+                <span>All rights reserved.</span>
+            </p>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
