Almost done about page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Laura Ukrainec | Home</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
         <div class="flex container">
             <!-- Logo -->
             <div class="logo flex">
-                <img src="img/PenguinLogo.png" alt="Laura Ukrainec's logo" height="100rem">
+                <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
                     <span>- Game Programmer -</span>
@@ -33,8 +33,8 @@
             <!-- Menu -->
             <nav>
                 <ul class="main-menu">
-                    <li><a class="current" href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
+                    <li><a class="current" href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li class="top-level">
                         <a href="#">Portfolio
                         <!-- Dropdown Arrow -->
@@ -52,7 +52,7 @@
             </nav>
         </div>
     </header>
-    <main class="container">
+    <main class="home container">
         <!-- Hello -->
         <section>
             <h2>Hello!</h2>
@@ -63,7 +63,7 @@
                     </p>
                     <p>I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.</p>
                 </div>
-                <a class="flex" href="#">Learn More
+                <a class="flex btn" href="about.html">Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
@@ -81,7 +81,7 @@
                     <p>I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.</p>
                     <p>I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.</p>
                 </div>
-                <a class="flex" href="#">Portfolio
+                <a class="flex btn" href="#">Portfolio
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
@@ -99,7 +99,7 @@
                     <p>I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.</p>
                     <p>If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.</p>
                 </div>
-                <a class="flex" href="#">Contact Me
+                <a class="flex btn" href="#">Contact Me
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
                     </svg>
