Working on Game pages

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                     <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="top-level">
-                        <a href="#">Portfolio
+                        <a href="portfolio.html">Portfolio
                         <!-- Dropdown Arrow -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 						</svg></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Games</a></li>
-                            <li><a href="#">Artwork</a></li>
-                            <li><a href="#">Personal Projects</a></li>
+                            <li><a href="games.html">Games</a></li>
+                            <li><a href="artwork.html">Artwork</a></li>
+                            <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
