--- a/about.html
+++ b/about.html
@@ -36,18 +36,18 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a class="current" href="about.html">About</a></li>
                     <li class="top-level">
-                        <a href="#">Portfolio
+                        <a href="portfolio.html">Portfolio
                         <!-- Dropdown Arrow -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 						</svg></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Games</a></li>
-                            <li><a href="#">Artwork</a></li>
-                            <li><a href="#">Personal Projects</a></li>
+                            <li><a href="games.html">Games</a></li>
+                            <li><a href="artwork.html">Artwork</a></li>
+                            <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -70,7 +70,7 @@
                     <div class="tiles">
                         <div class="tile">
                             <h3 class="tile-title">Languages</h3>
-                            <div class="flex">
+                            <div class="content flex">
                                 <!-- C# -->
                                 <img src="img/csharp-logo.svg" alt="C Sharp logo">
                                 <!-- Javascript -->
@@ -89,7 +89,7 @@
                         </div>
                         <div class="tile">
                             <h3 class="tile-title">Programs</h3>
-                            <div class="flex">
+                            <div class="content flex">
                                 <!-- Unity -->
                                 <img src="img/unity-logo.svg" alt="Unity logo">
                                 <!-- Unreal Engine -->
@@ -117,12 +117,6 @@
                             <img src="img/microsoft-word-logo.webp" alt="Download my resume!"> Click to download!
                         </a>
                     </div>
-                </section>
-                <!-- Back to Top -->
-                <section class="back-to-top">
-                    <a href="#">
-                        <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo"> Back to Top
-                    </a>
                 </section>
             </div>
             <div class="divider"></div>
@@ -153,6 +147,12 @@
                         <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangul.</li>
                         <li>I love puzzles, including jigsaws, crosswords, cryptograms, and Sudoku.</li>
                     </ul>
+                </section>
+                <!-- Back to Top -->
+                <section class="back-to-top">
+                    <a href="#">
+                        <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo"> Back to Top
+                    </a>
                 </section>
             </div>
         </div>
