--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <div class="logo flex">
+            <a class="logo flex">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
                     <span>- Game Programmer -</span>
                 </h1>
-            </div>
+            </a>
             <!-- Menu Icon -->
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 menu-icon" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h8m-8 6h16" />
@@ -42,7 +42,17 @@
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 						</svg></a>
                         <ul class="dropdown-menu">
-                            <li><a href="games.html">Games</a></li>
+                            <li class="top-level"><a href="games.html">Games
+                            <!-- Dropdown Arrow -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                            </svg></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="mr-skellington.html">Mr. Skellington</a></li>
+                                    <li><a href="pingus-fish.html">Pingu's Fish</a></li>
+                                    <li><a href="flowers-for-freedom.html">Flowers for Freedom</a></li>
+                                </ul>
+                            </li>
                             <li><a href="artwork.html">Artwork</a></li>
                             <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
@@ -58,10 +68,12 @@
             <h2>Hello!</h2>
             <div>
                 <div>
-                    <p>I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting
-                        blueprints.
+                    <p>
+                        I'm a creative game programmer who wants to make immersive games that people love to play. I specialize in traditional 2D and 3D games using C# and Unity, but have also built a virtual reality game in Unreal Engine 4 using visual scripting blueprints.
                     </p>
-                    <p>I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.</p>
+                    <p>
+                        I'm organized and love solving problems and puzzles of all sorts. Thanks to my background in customer service, I have strong communication skills and 8 years of experience working as part of a team in challenging environments.
+                    </p>
                 </div>
                 <a class="flex btn" href="about.html">Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -76,10 +88,15 @@
             <h2>What I can do.</h2>
             <div>
                 <div>
-                    <p>I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
+                    <p>
+                        I have successfully worked on many different aspects of video games, including design, game management, textures, UI/UX, and sound.
                     </p>
-                    <p>I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.</p>
-                    <p>I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.</p>
+                    <p>
+                        I believe that the most important part of any game is the user experience, so I focus my efforts on developing the game's look and feel.
+                    </p>
+                    <p>
+                        I also dabble in website design/building and SQL. I'm currently learning C++ in my spare time.
+                    </p>
                 </div>
                 <a class="flex btn" href="#">Portfolio
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
@@ -94,10 +111,15 @@
             <h2>I can help you.</h2>
             <div>
                 <div>
-                    <p>I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
+                    <p>
+                        I love working with people who share my creativity, passion for games, and commitment to providing a fun player experience.
                     </p>
-                    <p>I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.</p>
-                    <p>If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.</p>
+                    <p>
+                        I'm currently looking for work as a entry to mid level game programmer. My goal is to become a technical designer.
+                    </p>
+                    <p>
+                        If you need help creating a game, have any questions, or just want to say hi, then get in touch with me.
+                    </p>
                 </div>
                 <a class="flex btn" href="#">Contact Me
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16 " fill="#fff" class="bi bi-chevron-right" viewBox="0 0 16 16">
