--- a/pingus-fish.html
+++ b/pingus-fish.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laura Ukrainec | Contact</title>
+    <title>Laura Ukrainec | Pingu's Fish</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
                             </svg></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="mr-skellington.html">Mr. Skellington</a></li>
-                                    <li><a href="pingus-fish.html">Pingu's Fish</a></li>
+                                    <li><a class="current" href="pingus-fish.html">Pingu's Fish</a></li>
                                     <li><a href="flowers-for-freedom.html">Flowers for Freedom</a></li>
                                 </ul>
                             </li>
@@ -57,13 +57,13 @@
                             <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
                     </li>
-                    <li><a class="current" href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main class="contact container">
-        <h2>Contact</h2>
+    <main class="container">
+        <h2>Pingu's Fish</h2>
     </main>
     <footer>
         <div class="decoration"></div>
