--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <div class="logo flex">
+            <a class="logo flex">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
                     <span>- Game Programmer -</span>
                 </h1>
-            </div>
+            </a>
             <!-- Menu Icon -->
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 menu-icon" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h8m-8 6h16" />
@@ -42,7 +42,17 @@
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 						</svg></a>
                         <ul class="dropdown-menu">
-                            <li><a href="games.html">Games</a></li>
+                            <li class="top-level"><a href="games.html">Games
+                            <!-- Dropdown Arrow -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                            </svg></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="mr-skellington.html">Mr. Skellington</a></li>
+                                    <li><a href="pingus-fish.html">Pingu's Fish</a></li>
+                                    <li><a href="flowers-for-freedom.html">Flowers for Freedom</a></li>
+                                </ul>
+                            </li>
                             <li><a href="artwork.html">Artwork</a></li>
                             <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
