--- a/mr-skellington.html
+++ b/mr-skellington.html
@@ -19,13 +19,13 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <div class="logo flex">
+            <a class="logo flex">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
                     <span>- Game Programmer -</span>
                 </h1>
-            </div>
+            </a>
             <!-- Menu Icon -->
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 menu-icon" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M4 6h16M4 12h8m-8 6h16" />
@@ -36,13 +36,23 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="top-level">
-                        <a class="current" href="portfolio.html">Portfolio
+                        <a href="portfolio.html">Portfolio
                         <!-- Dropdown Arrow -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
 						</svg></a>
                         <ul class="dropdown-menu">
-                            <li><a class="current" href="games.html">Games</a></li>
+                            <li class="top-level"><a href="games.html">Games
+                            <!-- Dropdown Arrow -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="#ff7700">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                            </svg></a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="current" href="mr-skellington.html">Mr. Skellington</a></li>
+                                    <li><a href="#">Pingu's Fish</a></li>
+                                    <li><a href="#">Flowers for Freedom</a></li>
+                                </ul>
+                            </li>
                             <li><a href="artwork.html">Artwork</a></li>
                             <li><a href="personal-projects.html">Personal Projects</a></li>
                         </ul>
@@ -54,18 +64,88 @@
     </header>
     <main class="container">
         <h2>Mr. Skellington</h2>
-        <p>You play as Mr. Skellington, a skeleton who wants nothing more than health in his old age. Luckily, milk can help create strong bones and he happened to find a cave full of it! Your goal is to collect all of the milk cartons in the cave, hopping
-            from platform to platform and timing your jump onto the elevator to reach cartons on higher levels.</p>
-        <div class="mr-skellington gallery">
-            <div class="flex images">
+        <!-- Specifics -->
+        <section>
+            <div class="tiles">
+                <div class="tile">
+                    <h3 class="tile-title">What I Used</h3>
+                    <div class="content flex">
+                        <img src="img/csharp-logo.svg" alt="CSharp logo">
+                        <img src="img/visual-studio-logo.svg" alt="Visual Studio logo">
+                        <img src="img/monogame-logo.webp" alt="Monogame Logo">
+                        <img src="img/adobe-photoshop-logo.svg" alt="Adobe Photoshop Logo">
+                    </div>
+                </div>
+                <div class="tile">
+                    <h3 class="tile-title">What I Did</h3>
+                    <div class="content">
+                        <ul>
+                            <li>UI Design</li>
+                            <li>Texture Creation</li>
+                            <li>Level Design</li>
+                            <li>Gameplay Scripting</li>
+                            <li>Environment Programming</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="tile only-lg-screen">
+                    <h3 class="tile-title">Download</h3>
+                    <div class="content">
+                        <a href="#">Mr. Skellington</a>
+                        <p class="note"><i>*Requires Visual Studio and Monogame*</i></p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
+        <!-- Overview -->
+        <section>
+            <h3>Overview</h3>
+            <p>
+                You play as Mr. Skellington, a skeleton who wants nothing more than health in his old age. Luckily, milk can help create strong bones and he happened to find a cave full of it! Your goal is to collect all of the milk cartons in the cave, hopping from
+                platform to platform and timing your jump onto the elevator to reach cartons on higher levels.
+            </p>
+            <div class="mr-skellington gallery">
+                <div class="flex images">
+                </div>
+            </div>
+        </section>
+        <!-- Process -->
         <section>
             <h3>Process</h3>
-            <p>This game began a sprite animation script and a desire to create a simple 2D platformer with collectables. I like to make things look good, so my first step was taking care of all the visual content. I found basic cave textures and a free-to-use
-                sprite sheet for Mr. Skellington, then used Photoshop to make them seem more cohesive. I also made the collectables and all of the UI screens using Photoshop.</p>
             <p>
-
+                This game began a sprite animation script and a desire to create a simple 2D platformer with collectables. I like to make things look good, so my first step was taking care of all the visual content. I found basic cave textures and a free-to-use sprite
+                sheet for Mr. Skellington, then used Photoshop to make them seem more cohesive. I also made the collectables and all of the UI screens using Photoshop.
+            </p>
+            <p>
+                Then I moved on to the code itself. Since the animation sequence had been provided for me, I began work on a very important part of any game: colliders. I wrote a separate collider class for each side, all of which inherited from a base collider class.
+                This way I could control exactly what happens when the player interacts with anything. I added a draw state for all of my colliders for easier debugging. This led me to the collectables, which simply aren't drawn upon collection, then
+                to platforms, which are essentially a list of 4 colliders with a texture. I also added a moving platform for an extra challenge.
+            </p>
+            <p>
+                Next up was Mr. Skellington himself. He has 3 enum states that control the sprite animations and multiple methods for every aspect of movement. This includes basic movement, such as horizontal/vertical or both, as well as jumping, landing, and simply
+                standing on things. This script keeps track of his position and internal bounding box for collision processing, but doesn't react to the collision. I felt that was better suited for the collider scripts.
+            </p>
+            <p>
+                Finally, I wrote the meat of the game. I decided to use enums to control the overall game state since they can be easily modified if I wanted to add more levels. I set up all the basics, such as the game window and lists to keep track of colliders, platforms,
+                and the collectables. The lists made it easy to apply logic to everything at the same time, like initializing, updating/drawing, and monitoring the collectables to check for a win.
+            </p>
+        </section>
+        <!-- Accomplishments -->
+        <section>
+            <h3>Accomplishments</h3>
+            <p>
+                Mr. Skellington was the first complete game that I made in Monogame, which is very code-heavy. This meant that I had to figure out how to create objects that interact with each other, or in other words, collide. I realized that a collider is just a box
+                around the sprite's texture, and from there I wrote a base collider class that keeps track of its position and dimensions. Then I made separate child classes to control collisions from every direction. This might not seem very impressive,
+                but this had me stumped for a while and I was extremely proud of myself when I figured it out.
+            </p>
+            <p>
+                Unlike Unity, Monogame doesn't have different scenes to transition between stages of the game, such as Start, Playing, and End. I solved this by using enums to store the current stage, pairing it with switch statements to emulate separate game stages.
+                Like having different user inputs for the Start screen than the Playing phase, for example, and only drawing the congratulations panel after the player has collected everything.
+            </p>
+            <p>
+                The most challenging aspect of this game was the elevator platform. Though I'd already puzzled out colliders, I had a new problem: how do I make the player move with the elevator instead of staying stationary or clipping through it? First, I created a
+                method to first store the bounding box of whatever Mr. Skellington landed on, then adjust his position to right above the top collider. After negating gravity, I finally got him to move at the same rate as the platform. In hindsight, I
+                believe that I was over-thinking it the entire time, making the process a lot harder than it needed to be. Overall, I'm pleased with how it turned out.
             </p>
         </section>
     </main>
