More Pingu's Quest work

--- a/artwork.html
+++ b/artwork.html
@@ -58,7 +58,7 @@
                                 </ul>
                             </li>
                             <li><a class="current" href="artwork.html">Artwork</a></li>
-                            <li><a href="personal-projects.html">Personal Projects</a></li>
+                            <li><a href="pingus-quest.html">Pingu's Quest</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
