--- a/pingus-quest.html
+++ b/pingus-quest.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Laura Ukrainec's online portfolio">
     <meta name="author" content="Laura Ukrainec">
-    <title>Laura Ukrainec | Personal Projects</title>
+    <title>Laura Ukrainec | Pingu's Quest</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +58,7 @@
                                 </ul>
                             </li>
                             <li><a href="artwork.html">Artwork</a></li>
-                            <li><a class="current" href="personal-projects.html">Personal Projects</a></li>
+                            <li><a class="current" href="pingus-quest.html">Pingu's Quest</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -67,18 +67,15 @@
         </div>
     </header>
     <main class="projects container">
-        <h2>Personal Projects</h2>
-        <section>
-            <h3>Pingu's Quest</h3>
-            <div class="quote">
-                <div class="decoration"></div>
-                <div>
-                    <q><i>Glacierra is home to a colony of penguins who have been hunted down ever since the surrounding waters became a migration channel for predators. Pingu is a small penguin who's trying to find all 10 Stones of Power so that he can make a wish to relocate
+        <h2>Pingu's Quest</h2>
+        <div class="quote">
+            <div class="decoration"></div>
+            <div>
+                <q><i>Glacierra is home to a colony of penguins who have been hunted down ever since the surrounding waters became a migration channel for predators. Pingu is a small penguin who's trying to find all 10 Stones of Power so that he can make a wish to relocate
                 the predators and save his colony.</i></q>
-                </div>
-                <div class="decoration"></div>
             </div>
-        </section>
+            <div class="decoration"></div>
+        </div>
         <img class="picture" src="img/pingus-quest/box-art.webp" alt="Pingu's Quest box art">
         <!-- Overview -->
         <section>
@@ -117,25 +114,25 @@
                 <!-- Menus -->
                 <div class="tile">
                     <h4 class="tile-title">Menus</h4>
-                    <p class="title-note">Click to enlarge</p>
+                    <p class="title-note">Click to enlarge.</p>
                     <div class="menus flex"></div>
                 </div>
                 <!-- Places -->
                 <div class="tile">
                     <h4 class="tile-title">Places</h4>
-                    <p class="title-note">Click to enlarge</p>
+                    <p class="title-note">Click to enlarge.</p>
                     <div class="places flex"></div>
                 </div>
                 <!-- Puzzles -->
                 <div class="tile">
                     <h4 class="tile-title">Puzzles</h4>
-                    <p class="title-note">Click to enlarge</p>
+                    <p class="title-note">Click to enlarge.</p>
                     <div class="puzzles flex"></div>
                 </div>
                 <!-- Characters -->
                 <div class="tile">
                     <h4 class="tile-title">Characters</h4>
-                    <p class="title-note">Click to enlarge</p>
+                    <p class="title-note">Click to enlarge.</p>
                     <div class="characters flex"></div>
                 </div>
                 <!-- Stones -->
@@ -143,7 +140,24 @@
                     <h4 class="tile-title">Stones</h4>
                     <div class="stones flex"></div>
                 </div>
+                <!-- Items -->
+                <div class="tile">
+                    <h4 class="tile-title">Items</h4>
+                    <div class="items flex"></div>
+                </div>
             </div>
+        </section>
+        <!-- Comments -->
+        <section>
+            <h3>Comments</h3>
+            <p>
+                As you can see, I've put a lot of time and effort into developing the pixellated art style. I obviously drew inspiration from the Pokémon series for quite a few things, such as the isometric perspective, environment style, and UI pop-ups. However, the
+                characters, Stones, items, and environments are all my own, done pixel by pixel in GIMP. Luckily, I found out that I happen to be pretty good at pixel art! I'm extremely proud of the Rose Quartz in particular, so please take a look if
+                you haven't already!
+            </p>
+            <p>
+                I also wrote out the introduction, storyline, and quite a few of the questlines
+            </p>
         </section>
     </main>
     <footer>
