--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                                 </ul>
                             </li>
                             <li><a href="artwork.html">Artwork</a></li>
-                            <li><a href="personal-projects.html">Personal Projects</a></li>
+                            <li><a href="pingus-quest.html">Personal Projects</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -93,7 +93,7 @@
             </a>
             <a class="tile-link" href="personal-projects.html">
                 <div class="tile">
-                    <h3 class="tile-title">Personal Projects
+                    <h3 class="tile-title">Pingu's Quest
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
                             <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
