--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex">
+            <a class="logo flex" href="index.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -169,6 +169,7 @@
                         <li>People most commonly describe me as "articulate" and "genuine".</li>
                         <li>I adore languages and can write in Cyrillic, Hiragana/Katakana, and Hangul.</li>
                         <li>I love puzzles, including jigsaws, crosswords, cryptograms, and Sudoku.</li>
+                        <li>I made this whole website myself with HTML, SASS, and JavaScript.</li>
                     </ul>
                 </section>
                 <!-- Back to Top -->
