--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex">
+            <a class="logo flex" href="index.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -58,7 +58,7 @@
                                 </ul>
                             </li>
                             <li><a href="artwork.html">Artwork</a></li>
-                            <li><a href="pingus-quest.html">Personal Projects</a></li>
+                            <li><a href="pingus-quest.html">Pingu's Quest</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -91,7 +91,7 @@
                     <p class="content">Check out my watercolor art.</p>
                 </div>
             </a>
-            <a class="tile-link" href="personal-projects.html">
+            <a class="tile-link" href="pingus-quest.html">
                 <div class="tile">
                     <h3 class="tile-title">Pingu's Quest
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
