--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex">
+            <a class="logo flex" href="index.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -68,6 +68,42 @@
     </header>
     <main class="contact container">
         <h2>Contact</h2>
+        <p>Have a question? Need help with your game? Want to make a new friend in the game industry? Send me an email!</p>
+        <p>- All fields are required -</p>
+        <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mwkypvzy" method="post">
+            <fieldset id="fs-frm-inputs">
+                <!-- Name -->
+                <div>
+                    <!-- Person Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fec71e" class="bi bi-person-fill" viewBox="0 0 16 16">
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                    </svg>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="What should I call you?" required>
+                </div>
+                <!-- Email -->
+                <div>
+                    <!-- Email Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fec71e" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                    </svg>
+                    <label for="email-address">Email Address</label>
+                    <input type="email" name="_replyto" id="email-address" placeholder="email@domain.com " required>
+                </div>
+                <!-- Message -->
+                <div>
+                    <!-- Pencil Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fec71e" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                        <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+                    </svg>
+                    <label for="message">Message</label>
+                    <textarea rows="5" name="message" id="message" placeholder="What can I do for you?" minlength="5" required></textarea>
+                </div>
+                <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+            </fieldset>
+            <input type="submit" value="Submit">
+        </form>
+        <img src="img/happy-pingu.webp" alt="A very happy penguin">
     </main>
     <footer>
         <div class="decoration"></div>
@@ -77,7 +113,7 @@
             </p>
         </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/main.js "></script>
 </body>
 
 </html>
