--- a/pingus-quest.html
+++ b/pingus-quest.html
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex">
+            <a class="logo flex" href="index.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -66,7 +66,7 @@
             </nav>
         </div>
     </header>
-    <main class="projects container">
+    <main class="pq container">
         <h2>Pingu's Quest</h2>
         <div class="quote">
             <div class="decoration"></div>
@@ -76,63 +76,68 @@
             </div>
             <div class="decoration"></div>
         </div>
-        <img class="picture" src="img/pingus-quest/box-art.webp" alt="Pingu's Quest box art">
         <!-- Overview -->
         <section>
-            <h3>Overview</h3>
-            <p>
-                For the last few years, I've been working on a game of my own that I'm calling Pingu's Quest (for now, anyway). I've done quite a bit of work fleshing out the characters and story, and I have something I'm really proud of. Pingu's Quest will be a single-player
-                action-adventure RPG with puzzle elements, sort of like the Legend of Zelda series. I want to give it an almost nostalgic feel, so I'm using a pixelated art style and an appearance similar to the old Gameboy Pokémon games.
-            </p>
-            <p>
-                Rather than being focused on the main character like a lot of modern games, Pingu's Quest will provide no storyline other than a brief introduction. This is so players are encouraged to explore the world around them to figure out what they need to do.
-            </p>
-            <p>
-                To win the game, the player must solve puzzles to find all 10 Stones of Power, then bring them to the Temple and make a wish to send all the predators far away. These multi-step puzzles can be simple, like finding a key to unlock a door or navigating
-                a slippery maze, but can also be quite difficult, like copying audio sequences or translating instructions. There are also several side quests given by NPCs that can affect the story and environment, such as giving rewards that give Pingu
-                a boost in combat or clearing a blocked path. Speaking of combat, Pingu will occasionally have to fight off some of the predators that are infesting Glacierra.
-            </p>
+            <h3 class="lined">Overview</h3>
+            <div class="chunk">
+                <img class="picture" src="img/pingus-quest/box-art.webp" alt="Pingu's Quest box art">
+                <div>
+                    <p>
+                        For the last few years, I've been working on a game of my own that I'm calling Pingu's Quest (for now, anyway). I've done quite a bit of work fleshing out the characters and story, and I have something I'm really proud of. Pingu's Quest will be a single-player
+                        action-adventure RPG with puzzle elements, sort of like the Legend of Zelda series. I want to give it an almost nostalgic feel, so I'm using a pixelated art style and an appearance similar to the old Gameboy Pokémon games.
+                    </p>
+                    <p>
+                        Rather than being focused on the main character like a lot of modern games, Pingu's Quest will provide no storyline other than a brief introduction. This is so players are encouraged to explore the world around them to figure out what they need to do.
+                    </p>
+                    <p>
+                        To win the game, the player must solve puzzles to find all 10 Stones of Power, then bring them to the Temple and make a wish to send all the predators far away. These multi-step puzzles can be simple, like finding a key to unlock a door or navigating
+                        a slippery maze, but can also be quite difficult, like copying audio sequences or translating instructions. There are also several side quests given by NPCs that can affect the story and environment, such as giving rewards that
+                        give Pingu a boost in combat or clearing a blocked path. Speaking of combat, Pingu will occasionally have to fight off some of the predators that are infesting Glacierra.
+                    </p>
+                </div>
+            </div>
         </section>
-        <img class="picture" src="img/pingus-quest/title-screen.webp" alt="Pingu's Quest title screen">
         <!-- Story -->
         <section>
-            <h3>Story</h3>
-            <p>
-                Penguins are adorable creatures that spend their entire lives doing a whole lot of nothing. Unless, of course, they have a mission. Such is the case with Pingu, a small ostracised penguin who lives in Iceburra, a town in the icy region of Glacierra where
-                he and his colony have lived peacefully for generations. At least, they did until the surrounding waters became a major migration channel for all sorts of penguin predators, from skuas to leopard seals and orcas.
-            </p>
-            <p>
-                During a fishing expedition one day, Pingu came across an ancient book that hints at 10 Stones scattered about Glacierra that were created by the Great Lord Guin himself. Legend has it that these stones possess great power and will grant a single wish
-                to the one who can find and unite them all. Seeing his chance, Pingu immediately sets off on a quest to find all the Stones of Power so that he can wish for his colony to be saved from a slow death by predation. This isn't as easy as it
-                sounds however, for the Stones are hidden behind puzzles that have stumped even the great old Featherknights of lore. But Pingu is confident and determined, so it's only a matter of time before the colony knows peace again.
-            </p>
+            <h3 class="lined">Story</h3>
+            <div class="chunk">
+                <img class="picture reorder" src="img/pingus-quest/title-screen.webp" alt="Pingu's Quest title screen">
+                <div>
+                    <p>
+                        Penguins are adorable creatures that spend their entire lives doing a whole lot of nothing. Unless, of course, they have a mission. Such is the case with Pingu, a small ostracised penguin who lives in Iceburra, a town in the icy region of Glacierra where
+                        he and his colony have lived peacefully for generations. At least, they did until the surrounding waters became a major migration channel for all sorts of penguin predators, from skuas to leopard seals and orcas.
+                    </p>
+                    <p>
+                        During a fishing expedition one day, Pingu came across an ancient book that hints at 10 Stones scattered about Glacierra that were created by the Great Lord Guin himself. Legend has it that these stones possess great power and will grant a single wish
+                        to the one who can find and unite them all. Seeing his chance, Pingu immediately sets off on a quest to find all the Stones of Power so that he can wish for his colony to be saved from a slow death by predation. This isn't as easy
+                        as it sounds however, for the Stones are hidden behind puzzles that have stumped even the great old Featherknights of lore. But Pingu is confident and determined, so it's only a matter of time before the colony knows peace again.
+                    </p>
+                </div>
+            </div>
         </section>
         <!-- Concept Art -->
         <section>
-            <h3>Concept Art</h3>
+            <h3 class="lined">Concept Art</h3>
+            <aside>Click the images to enlarge them!</aside>
             <div class="tiles">
                 <!-- Menus -->
                 <div class="tile">
                     <h4 class="tile-title">Menus</h4>
-                    <p class="title-note">Click to enlarge.</p>
                     <div class="menus flex"></div>
                 </div>
                 <!-- Places -->
                 <div class="tile">
                     <h4 class="tile-title">Places</h4>
-                    <p class="title-note">Click to enlarge.</p>
                     <div class="places flex"></div>
                 </div>
                 <!-- Puzzles -->
                 <div class="tile">
                     <h4 class="tile-title">Puzzles</h4>
-                    <p class="title-note">Click to enlarge.</p>
                     <div class="puzzles flex"></div>
                 </div>
                 <!-- Characters -->
                 <div class="tile">
                     <h4 class="tile-title">Characters</h4>
-                    <p class="title-note">Click to enlarge.</p>
                     <div class="characters flex"></div>
                 </div>
                 <!-- Stones -->
@@ -149,15 +154,27 @@
         </section>
         <!-- Comments -->
         <section>
-            <h3>Comments</h3>
+            <h3 class="lined">Comments</h3>
             <p>
                 As you can see, I've put a lot of time and effort into developing the pixellated art style. I obviously drew inspiration from the Pokémon series for quite a few things, such as the isometric perspective, environment style, and UI pop-ups. However, the
                 characters, Stones, items, and environments are all my own, done pixel by pixel in GIMP. Luckily, I found out that I happen to be pretty good at pixel art! I'm extremely proud of the Rose Quartz in particular, so please take a look if
                 you haven't already!
             </p>
             <p>
-                I also wrote out the introduction, storyline, and quite a few of the questlines
+                I also wrote out the introduction, storyline, and quite a few of the NPC questlines. As a Canadian, it's important to me to have the game in both French and English, so I've translated everything into French as well.
             </p>
+            <p>
+                The only downside is that between university, work, and an internship, I don't actually have a lot of time to work on this. I don't know how long it'll take me to make this, but it will DEFINITELY happen!
+            </p>
+        </section>
+        <!-- Trailer -->
+        <section>
+            <h3 class="lined">Game Trailer</h3>
+            <video controls>
+                <source src="docs/pingus-quest-trailer.mp4" type="video/mp4">
+                <source src="docs/pingus-quest-trailer.ogg" type="video/ogg">
+                Sorry, but your browser doesn't support the video tag.
+            </video>
         </section>
     </main>
     <footer>
