--- a/artwork.html
+++ b/artwork.html
@@ -23,7 +23,7 @@
         <div class="decoration"></div>
         <div class="flex container">
             <!-- Logo -->
-            <a class="logo flex" href="index.html">
+            <a class="logo flex" href="home.html">
                 <img src="img/penguin-logo.webp" alt="Laura Ukrainec's logo" height="100rem">
                 <h1>
                     Laura Ukrainec
@@ -37,7 +37,7 @@
             <!-- Menu -->
             <nav>
                 <ul class="main-menu">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="top-level">
                         <a href="portfolio.html">Portfolio
@@ -68,6 +68,7 @@
     </header>
     <main class="artwork container">
         <h2>Artwork</h2>
+        <p>Click the images to enlarge them!</p>
         <div class="artwork gallery">
             <div class="flex images">
             </div>
